2017-10-08  larissa9839  <larissa9839@gmail.com>

	* tryXpath/background/try_xpath_background.js:
	Modify attributes variable.

	* tryXpath/scripts/try_xpath_content.js:
	Modify attributes variable.

	* tryXpath/popup/popup.js:
	Define changeFrameVisible function.
	Define frameHeader, frameCheckbox, frameBody and frameExpression
	variable.
	Modify collectPopupState function.
	Modify genericListener.listeners.restorePopupState function.
	Modify makeExecuteMessage function.

	* tryXpath/popup/popup.html:
	Add frame input field.

	* tryXpath/scripts/try_xpath_content.js:
	Modify genericListener.listeners.execute function.

2017-10-07  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Modify makeExecuteMessage function.

	* tryXpath/background/try_xpath_background.js:
	Modify this file. The add-on inserts css to all frames and removes
	css from all frames.
	Rename frameSpecification to frameDesignation.

	* tryXpath/scripts/try_xpath_content.js:
	Define getFrames function.
	Define currentFrames variable.

	* tryXpath/scripts/try_xpath_functions.js:
	Define getFrameAncestry function.
	Define isNumberArray function.

2017-10-06  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Remove cssInserted variable.
	Define currentCss and expiredCssSet.
	Modify genericListener.listeners.finishInsertCss function.
	Define updateCss function.
	Define genericListener.listeners.finishRemoveCss function.
	Define handleCssChange function.

	* tryXpath/background/try_xpath_background.js:
	Remove genericListener.listeners.insertCss function.
	Define genericListener.listeners.updateCss function.

	* tryXpath/scripts/try_xpath_content.js:
	Define originalAttributes variable.
	Define setAttr function.
	Define setIndex function.
	Remove removeAttrs function.
	Define restoreAttrs function.
	Add storage.onChanged listener.

	* tryXpath/scripts/try_xpath_functions.js:
	Change saveAttrForItem function arguments.