@@ -17,6 +17,8 @@
     <dd><input type="text" id="focused-attribute"></dd>
     <dt><label for="ancestor-attribute">Ancestors of the focused element</label></dt>
     <dd><input type="text" id="ancestor-attribute"></dd>
+    <dt><label for="frame-attribute">Frame elements</label></dt>
+    <dd><input type="text" id="frame-attribute"></dd>
   </dl>
 </div>
 <div>
